<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mopidy Wombat Client</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_songs_in_playlist">Playlist detail</string>
    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>
    <string name="button_add_description">Add songs</string>
    <string name="button_play_description">Play</string>
    <string name="button_inspect_description">Show</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="volume">Volume</string>
    <string name="repeat">Repeat</string>
    <string name="random">Random</string>
    <string name="server_address">Server Address</string>
    <string name="server_port">Server Port</string>
    <string name="save">Save</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="playlist_icon">Playlist Icon</string>
    <string name="folder_icon">Folder Icon</string>
    <string name="loading">Loading</string>

    <string name="current_playlist">Current playlist</string>
    <string name="all_playlists">All playlists</string>
    <string name="search">Search</string>

	<string name="error_action_list_empty">The actions list is empty</string>
	<string name="error_not_connected">Not connected to internet</string>
	<string name="error_from_server">Received an error from server :</string>
	<string name="error_timeout">Timeout: Server hasn\'t answered in 10sec.</string>
    
</resources>
