<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playlistItemLayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.38"
            android:text="@string/server_address"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/server_address"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/server_port"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/server_port"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|numberDecimal"
            android:textColor="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingRight="6dp" >

        <Button
            android:id="@+id/button_save"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/text"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>